    FIXED: [ 310722 ] viewer crash when opening file
    FIXED: search result view always displays owner and group as "root"
           (may not work for remote search)
    FIXED: [ 217711 ] directory chooser dialog does not allow to choose a directory
    FIXED: [ 309119 ] Wrong "New directory" dialog behavior: can't clear all typed text
    FIXED: [ 309159 ] Crash in video files preview on F3


2.4.0-beta3 "Single Step"
=========================

    FIXED: crash when trying to open/(un)mount ejectable device via media menu


2.4.0-beta2 "Giant Steps"
=========================

    ADDED: options: Panel > Media Menu > 
                Show Mount Path
                Show File Sytem Type
                Show Size (Always | When Device has no Label | Never)
    ADDED: pressing CTRL+RETURN when media menu is open (un)mounts the highlighted device
    ADDED: action: Bring Main Window to Top (global shortcut possible)
    ADDED: option: General > Viewer/Editor > Viewer > Use Okteta As Hex Viewer
           (default: on)
    ADDED: option: Archives > krarc > Enable Write Support
    ADDED: splitter option: Overwrite files without confirmation
    ADDED: action: Go to Other Panel's Directory - shortcut: CTRL+=

    CHANGED: krarc write support is disabled by default
    CHANGED: user action manager starts with the "Basic Properties" tab active
    CHANGED: detailed view: "Automatically Resize Columns" setting is remembered

    FIXED: [ 306472 ] Krusader fails to build when using clang as compiler -
           thanks to Jekyll Wu
    FIXED: [ 308193 ] Krusader closes the search window after file editing -
           thanks to Alexander
    FIXED: pressing the context menu key when the media menu is shown
           opens the context menu for a random item instead of the current
    FIXED: [ 300514 ] no warning if terminal emulator can't be created
    FIXED: [ 303209 ] passwords for remote connections are stored in config