@@ -1,3 +1,6 @@
+    FIXED: [ 315357 ] krarc silently fails to display contents of some zip files
+           zip files containing paths with "." as a path component are still not handled,
+           but now krarc reports an error instead silently failing
     FIXED: [ 310722 ] viewer crash when opening file
     FIXED: search result view always displays owner and group as "root"
            (may not work for remote search)
